modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/parser/errors/assignment_in_var_if.gd
func test():
	# Error here.
	if var foo = 25:
		print(foo)
